Added new Time class, updated this in the gameloop and fixed a bug in TextComponent where the texture was not initialized in initialize

--- a/Minigin/Minigin.vcxproj.filters
+++ b/Minigin/Minigin.vcxproj.filters
@@ -73,6 +73,9 @@
     <ClInclude Include="TextComponent.h">
       <Filter>Engine Files\Components</Filter>
     </ClInclude>
+    <ClInclude Include="Time.h">
+      <Filter>Engine Files\_Core</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="InputManager.cpp">
@@ -119,6 +122,9 @@
     </ClCompile>
     <ClCompile Include="TextComponent.cpp">
       <Filter>Engine Files\Components</Filter>
+    </ClCompile>
+    <ClCompile Include="Time.cpp">
+      <Filter>Engine Files\_Core</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
