--- a/Minigin/Minigin.vcxproj.filters
+++ b/Minigin/Minigin.vcxproj.filters
@@ -76,6 +76,7 @@
     <ClInclude Include="Time.h">
       <Filter>Engine Files\_Core</Filter>
     </ClInclude>
+    <ClInclude Include="FPSComponent.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="InputManager.cpp">
@@ -126,5 +127,6 @@
     <ClCompile Include="Time.cpp">
       <Filter>Engine Files\_Core</Filter>
     </ClCompile>
+    <ClCompile Include="FPSComponent.cpp" />
   </ItemGroup>
 </Project>
