--- a/Minigin/Minigin.vcxproj.filters
+++ b/Minigin/Minigin.vcxproj.filters
@@ -76,7 +76,9 @@
     <ClInclude Include="Time.h">
       <Filter>Engine Files\_Core</Filter>
     </ClInclude>
-    <ClInclude Include="FPSComponent.h" />
+    <ClInclude Include="FPSComponent.h">
+      <Filter>Engine Files\Components</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="InputManager.cpp">
@@ -127,6 +129,8 @@
     <ClCompile Include="Time.cpp">
       <Filter>Engine Files\_Core</Filter>
     </ClCompile>
-    <ClCompile Include="FPSComponent.cpp" />
+    <ClCompile Include="FPSComponent.cpp">
+      <Filter>Engine Files\Components</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
