- Started setting up DigDug character - Made some changes regarding glm, now it is included in pch - Implemented controller support with XInput

--- a/DigDug/DigDug.vcxproj
+++ b/DigDug/DigDug.vcxproj
@@ -187,10 +187,12 @@
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Characters.h" />
     <ClInclude Include="DigDug.h" />
     <ClInclude Include="pch.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Characters.cpp" />
     <ClCompile Include="DigDug.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="pch.cpp">
