--- a/Minigin/Minigin.vcxproj.filters
+++ b/Minigin/Minigin.vcxproj.filters
@@ -20,18 +20,15 @@
     <Filter Include="Engine Files\Scene">
       <UniqueIdentifier>{3952b066-2268-467f-a0c4-9c232774dadc}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Engine Files\_Main">
+      <UniqueIdentifier>{2e34b86e-76ea-4c1b-b8c5-2ac34b8f26a6}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="InputManager.h">
       <Filter>Engine Files\_Core</Filter>
     </ClInclude>
     <ClInclude Include="Log.h">
-      <Filter>Engine Files\_Core</Filter>
-    </ClInclude>
-    <ClInclude Include="MiniginPCH.h">
-      <Filter>Engine Files\_Core</Filter>
-    </ClInclude>
-    <ClInclude Include="Minigin.h">
       <Filter>Engine Files\_Core</Filter>
     </ClInclude>
     <ClInclude Include="targetver.h">
@@ -82,18 +79,21 @@
     <ClInclude Include="MovementComponent.h">
       <Filter>Engine Files\Components</Filter>
     </ClInclude>
+    <ClInclude Include="Minigin.h">
+      <Filter>Engine Files\_Main</Filter>
+    </ClInclude>
+    <ClInclude Include="MiniginPCH.h">
+      <Filter>Engine Files\_Main</Filter>
+    </ClInclude>
+    <ClInclude Include="Observer.h">
+      <Filter>Engine Files\_Core</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="InputManager.cpp">
       <Filter>Engine Files\_Core</Filter>
     </ClCompile>
     <ClCompile Include="Log.cpp">
-      <Filter>Engine Files\_Core</Filter>
-    </ClCompile>
-    <ClCompile Include="Minigin.cpp">
-      <Filter>Engine Files\_Core</Filter>
-    </ClCompile>
-    <ClCompile Include="MiniginPCH.cpp">
       <Filter>Engine Files\_Core</Filter>
     </ClCompile>
     <ClCompile Include="GameObject.cpp">
@@ -134,6 +134,15 @@
     </ClCompile>
     <ClCompile Include="MovementComponent.cpp">
       <Filter>Engine Files\Components</Filter>
+    </ClCompile>
+    <ClCompile Include="Minigin.cpp">
+      <Filter>Engine Files\_Main</Filter>
+    </ClCompile>
+    <ClCompile Include="MiniginPCH.cpp">
+      <Filter>Engine Files\_Main</Filter>
+    </ClCompile>
+    <ClCompile Include="Observer.cpp">
+      <Filter>Engine Files\_Core</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
