--- a/Minigin/Minigin.vcxproj.filters
+++ b/Minigin/Minigin.vcxproj.filters
@@ -91,6 +91,9 @@
     <ClInclude Include="GameContext.h">
       <Filter>Engine Files\_Core</Filter>
     </ClInclude>
+    <ClInclude Include="Structs.h">
+      <Filter>Engine Files\_Core</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="InputManager.cpp">
