--- a/DigDug/DigDug.vcxproj
+++ b/DigDug/DigDug.vcxproj
@@ -188,6 +188,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Characters.h" />
+    <ClInclude Include="CharacterStates.h" />
     <ClInclude Include="DigDug.h" />
     <ClInclude Include="LevelBlocks.h" />
     <ClInclude Include="Level_1.h" />
@@ -195,6 +196,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Characters.cpp" />
+    <ClCompile Include="CharacterStates.cpp" />
     <ClCompile Include="DigDug.cpp" />
     <ClCompile Include="LevelBlocks.cpp" />
     <ClCompile Include="Level_1.cpp" />
