--- a/DigDug/DigDug.vcxproj.filters
+++ b/DigDug/DigDug.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClInclude Include="Level_1.h">
       <Filter>Scenes</Filter>
     </ClInclude>
+    <ClInclude Include="CharacterStates.h">
+      <Filter>Prefabs</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp">
@@ -49,6 +52,9 @@
     </ClCompile>
     <ClCompile Include="Level_1.cpp">
       <Filter>Scenes</Filter>
+    </ClCompile>
+    <ClCompile Include="CharacterStates.cpp">
+      <Filter>Prefabs</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
