--- a/DigDug/DigDug.vcxproj
+++ b/DigDug/DigDug.vcxproj
@@ -190,16 +190,16 @@
     <ClInclude Include="Characters.h" />
     <ClInclude Include="CharacterStates.h" />
     <ClInclude Include="DigDug.h" />
-    <ClInclude Include="LevelBlocks.h" />
-    <ClInclude Include="Level_1.h" />
+    <ClInclude Include="DigDugLevel.h" />
+    <ClInclude Include="Prefabs.h" />
     <ClInclude Include="pch.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Characters.cpp" />
     <ClCompile Include="CharacterStates.cpp" />
     <ClCompile Include="DigDug.cpp" />
-    <ClCompile Include="LevelBlocks.cpp" />
-    <ClCompile Include="Level_1.cpp" />
+    <ClCompile Include="DigDugLevel.cpp" />
+    <ClCompile Include="Prefabs.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
