--- a/DigDug/DigDug.vcxproj
+++ b/DigDug/DigDug.vcxproj
@@ -193,6 +193,7 @@
     <ClInclude Include="DigDugLevel.h" />
     <ClInclude Include="Prefabs.h" />
     <ClInclude Include="pch.h" />
+    <ClInclude Include="RockStates.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Characters.cpp" />
@@ -207,6 +208,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="RockStates.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
