Rock States implemented, DigDug and Rock interaction implemented, starting adding AnimatedSpriteComponent, update to Texture2D and TextureComponent and TextComponent -> SDL_Texture do now get stored in a map so duplicate textures get only loaded in once, Texture2D now also holds a pointer to a Transform instead of a position so it is always in the latest position

--- a/Minigin/Minigin.vcxproj
+++ b/Minigin/Minigin.vcxproj
@@ -211,6 +211,7 @@ xcopy "$(SolutionDir)3rdParty\SDL2_ttf\lib\x64\*.dll" "$(SolutionDir)_Build\$(Co
     </Lib>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="AnimatedSpriteComponent.h" />
     <ClInclude Include="BaseComponent.h" />
     <ClInclude Include="BodyComponent.h" />
     <ClInclude Include="Box2DDebugRender.h" />
@@ -243,6 +244,7 @@ xcopy "$(SolutionDir)3rdParty\SDL2_ttf\lib\x64\*.dll" "$(SolutionDir)_Build\$(Co
     <ClInclude Include="TransformComponent.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="AnimatedSpriteComponent.cpp" />
     <ClCompile Include="BodyComponent.cpp" />
     <ClCompile Include="Box2DDebugRender.cpp" />
     <ClCompile Include="Box2DRaycastCallback.cpp" />
