Moved debug drawing to Scene and made GridComponent crete the grid in it's Constructor to be able to get the grid immediately

--- a/Minigin/Minigin.vcxproj
+++ b/Minigin/Minigin.vcxproj
@@ -216,6 +216,7 @@ xcopy "$(SolutionDir)3rdParty\SDL2_ttf\lib\x64\*.dll" "$(SolutionDir)_Build\$(Co
     <ClInclude Include="BodyComponent.h" />
     <ClInclude Include="Box2DDebugRender.h" />
     <ClInclude Include="Box2DRaycastCallback.h" />
+    <ClInclude Include="Conversions.h" />
     <ClInclude Include="Font.h" />
     <ClInclude Include="FPSComponent.h" />
     <ClInclude Include="FSMComponent.h" />
@@ -249,6 +250,7 @@ xcopy "$(SolutionDir)3rdParty\SDL2_ttf\lib\x64\*.dll" "$(SolutionDir)_Build\$(Co
     <ClCompile Include="BodyComponent.cpp" />
     <ClCompile Include="Box2DDebugRender.cpp" />
     <ClCompile Include="Box2DRaycastCallback.cpp" />
+    <ClCompile Include="Conversions.cpp" />
     <ClCompile Include="Font.cpp" />
     <ClCompile Include="FPSComponent.cpp" />
     <ClCompile Include="FSMComponent.cpp" />
